# UnitConvertor_06

./: .cursorrules  .gitignore  README.md  UnitConverter.py  decaying_unit.py  pr-body-feature-b06.md  pr-body-refactoring.md  pr-body.md  pyproject.toml
.github/workflows/: golden_master.yml
Report/: 01_UnitConvertor_06_Phase5_Spec_Documentation.md  02_UnitConvertor_06_Red_TDD_Implementation_Progress.md  03_UnitConvertor_06_Green_TDD_Implementation_Progress.md  04_UnitConvertor_06_Golden_Master_Refactoring_Progress.md  05_UnitConvertor_06_Dual_Track_Refactoring_Progress.md  06_UnitConvertor_06_Bonus_RegisterUnit_Progress.md  202605211_UnitConverter_Python_Phase6_Report.md
boundary/: __init__.py  cli_adapter.py  errors.py  parser.py
boundary/renderers/: __init__.py  json_renderer.py  table.py
config/: units.json
control/: __init__.py  converter_app.py
data/: __init__.py  repository.py
docs/: PRD.md  defect_list.md  pr-review-refactoring.md  requirements-package.md  test_plan.md
entity/: __init__.py  constants.py  display.py  engine.py  exceptions.py  registry.py
prompting/: 01_UnitConvertor_06_Phase5_Spec_Documentation.md  02_UnitConvertor_06_Red_TDD_Implementation_Progress.md  03_UnitConvertor_06_Green_TDD_Implementation_Progress.md  04_UnitConvertor_06_Golden_Master_Refactoring_Progress.md  05_UnitConvertor_06_Dual_Track_Refactoring_Progress.md  06_UnitConvertor_06_Bonus_RegisterUnit_Progress.md
scripts/: create-pr-feature-to-b06.ps1  create-pr-to-b06.ps1  export_transcript.py  generate_golden_master.py  pr_merge_refactoring_to_B06.ps1
tests/: conftest.py  golden_master.py  golden_master_expected.txt  test_decaying_unit.py  test_golden_master.py
(+17 files in other folders)
